--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             </div>
           </div>
         </section>
-        <section class="directionColumn">
+        <section class="sectionLightGreyBackground">
           <div>
             <h2>Découvrez nos cours !</h2>
             <div class="directionRow">
